<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_one"
    style="@style/card_style"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:gravity="center"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_one_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="16dp">

        <ImageButton
            android:id="@+id/close_job_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_24px"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/job_id_value_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/save_job_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_24px"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/job_id_value_text_view"
            app:layout_constraintTop_toBottomOf="@id/close_job_button" />

        <View
            android:id="@+id/color_bar"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/job_id_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/job_id"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintLeft_toRightOf="@id/color_bar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/job_id_value_text_view"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toBottomOf="@id/job_id_label_text_view"
            app:layout_constraintLeft_toLeftOf="@id/job_name_value_edit_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/job_name_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/job_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintLeft_toRightOf="@id/color_bar"
            app:layout_constraintTop_toBottomOf="@id/job_id_label_text_view" />

        <EditText
            android:id="@+id/job_name_value_edit_text"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toBottomOf="@id/job_name_label_text_view"
            app:layout_constraintLeft_toRightOf="@id/job_name_label_text_view"
            app:layout_constraintTop_toTopOf="@id/job_name_label_text_view" />

        <Button
            android:id="@+id/scheduled_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/yellow"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/scheduled"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/color_bar"
            app:layout_constraintTop_toBottomOf="@id/job_name_label_text_view" />

        <Button
            android:id="@+id/dispatched_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:text="@string/dispatched"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/scheduled_button"
            app:layout_constraintRight_toLeftOf="@id/completed_button"
            app:layout_constraintTop_toBottomOf="@id/job_name_label_text_view" />

        <Button
            android:id="@+id/completed_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/gray"
            android:gravity="center"
            android:text="@string/completed"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/job_name_label_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>